--- a/themes/tumblog/templates/index.tmpl
+++ b/themes/tumblog/templates/index.tmpl
@@ -2,15 +2,19 @@
 <%namespace name="helper" file="index_helper.tmpl"/>
 <%inherit file="base.tmpl"/>
 <%block name="content">
+    <ol id="posts">
     % for post in posts:
-        <div class="postbox">
-        <h1><a href="${post.permalink()}">${post.title()}</a></h1>
-            <div class="meta">                    
-                <span class="authordate">
+        <div class="post">
+        <h2><div class="link"><a href="${post.permalink()}">${post.title()}</a></div></h2>
+        ${post.text(teaser_only=index_teasers)}
+        </div>
+        <div></div>
+                    <div class="postbox">                    
+                <span><!-- class="authordate">-->
                     ${messages("Posted")}: ${post.formatted_date(date_format)}
                 </span>
                 <br>
-                <span class="tags">Tags:&nbsp;
+                <span> <!--class="tags">-->Tags:&nbsp;
                     %if post.tags:
                         %for tag in post.tags:
                             <a class="tag" href="${_link('tag', tag)}"><span class="badge badge-info">${tag}</span></a>
@@ -18,9 +22,7 @@
                     %endif
                 </span>
             </div>
-        ${post.text(teaser_only=index_teasers)}
-        </div>
-        <div></div>
     % endfor
+            </ol>
     ${helper.html_pager()}
 </%block>
