--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,7 +136,7 @@ html {
                 text-decoration: none;
             }
 		/*Quote Post*/
-		li.quotepost {
+		.post pre {
 			background: url(http://static.tumblr.com/2wjmz5y/g5Wlap9ew/simplethings-quote.png) no-repeat top left;
 			font-size: 35px;
 			margin: 60px 20px 20px 0;
@@ -150,7 +150,7 @@ html {
 		}
 		
 		/*Photo Post*/
-		li.photopost img {
+		.post img {
 			position: relative;
 			padding: 10px;
 			background:#fff;
