--- a/themes/tumblog/templates/base_helper.tmpl
+++ b/themes/tumblog/templates/base_helper.tmpl
@@ -29,7 +29,7 @@
 
 
 <%def name="html_social()">
-%if add_this_buttons:
+<!--%if add_this_buttons:
     <!-- Social buttons -->
     <div id="addthisbox" class="addthis_toolbox addthis_peekaboo_style addthis_default_style addthis_label_style addthis_32x32_style">
     <a class="addthis_button_more">Share</a>
@@ -41,7 +41,7 @@
     </div>
     <script type="text/javascript" src="http://s7.addthis.com/js/300/addthis_widget.js#pubid=ra-4f7088a56bb93798"></script>
     <!-- End of social buttons -->
-%endif
+%endif-->
 </%def>
 
 
